@@ -1,0 +1,50 @@
+/* Test count trailing bits operations from stdbit.h
+
+   type: unsigned short, unsigned int, unsigned long, unsigned long long
+ */
+
+#include <testfwk.h>
+
+#ifdef __SDCC // Todo: Enable for all C2X implementations
+#pragma std_c2x
+#include <stdbit.h>
+#endif
+
+#include <limits.h>
+
+volatile {type} i;
+
+void
+testTrailing(void)
+{
+#ifdef __SDCC // Todo: Enable for all C2X implementations
+	i = 0x0;
+	ASSERT (stdc_count_trailing_ones(i) == 0);
+	ASSERT (stdc_count_trailing_zeros(i) == sizeof({type}) * CHAR_BIT);
+
+	i = 0x1;
+	ASSERT (stdc_count_trailing_ones(i) == 1);
+	ASSERT (stdc_count_trailing_zeros(i) == 0);
+
+	i = 0x2;
+	ASSERT (stdc_count_trailing_ones(i) == 0);
+	ASSERT (stdc_count_trailing_zeros(i) == 1);
+
+	i = 0x3;
+	ASSERT (stdc_count_trailing_ones(i) == 2);
+	ASSERT (stdc_count_trailing_zeros(i) == 0);
+
+	i = 0x7;
+	ASSERT (stdc_count_trailing_ones(i) == 3);
+	ASSERT (stdc_count_trailing_zeros(i) == 0);
+
+	i = 0x8;
+	ASSERT (stdc_count_trailing_ones(i) == 0);
+	ASSERT (stdc_count_trailing_zeros(i) == 3);
+
+	i = 0x9;
+	ASSERT (stdc_count_trailing_ones(i) == 1);
+	ASSERT (stdc_count_trailing_zeros(i) == 0);
+#endif
+}
+
